--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #440be0;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
+a:hover{
+  color: #43dd55;
 }
 
 body {
@@ -30,11 +30,14 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #0b87e0;
+
 }
 
 button {
@@ -74,22 +77,28 @@ button:focus-visible {
 
 } */
 .container {
+  align-content:center;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  margin: 35px;
+  grid-template-columns:300px 300px 300px 300px;
+  margin: auto;
   gap: 10px;
+  background-color: #ffffff;
+  padding: 10px;
 
 }
-/* .ListItemButton span {
-  margin-left: 10px;
+.container_header {
+
+  margin: 20px;
+  border: 1px solid;
+  border-radius: 5px;
 }
-.ListItemButton p {
-  margin-left: 10px;
-} */
+
 .pagination {
   display: inline-block;
 }
 .view_button {
   position: sticky;
-  margin-top: 25px;
+
 }
+
+
