--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(233, 233, 233, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -77,14 +77,17 @@ button:focus-visible {
 
 } */
 .container {
+  margin: 10%;
+  background-color: #ffffff;
+  display: grid;
+}
+.product_container {
   align-content:center;
   display: grid;
   grid-template-columns:300px 300px 300px 300px;
-  margin: auto;
-  gap: 10px;
+  gap: 20px;
   background-color: #ffffff;
-  padding: 10px;
-
+  margin-top: 10%;
 }
 .container_signup {
   align-content:center;
@@ -96,7 +99,7 @@ button:focus-visible {
   padding: 10px;
   text-align: center;
 }
-.container_header {
+.product_header {
 
   margin: 20px;
   border: 1px solid;
@@ -112,3 +115,22 @@ button:focus-visible {
 }
 
 
+.navbar {
+  overflow: hidden;
+  top: 0; /* Position the navbar at the top of the page */
+}
+.zoom {
+  /* padding: 50px; */
+  /* background-color: green; */
+  transition: transform .3s;
+  /* width: 200px; */
+  /* height: 200px; */
+  /* margin: 0 auto; */
+}
+
+.zoom:hover {
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
+  transform: scale(1.1);
+  z-index: -10;
+}
