--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: none !important;
 }
 
 @media (prefers-color-scheme: light) {
@@ -77,7 +77,7 @@ button:focus-visible {
 
 } */
 .container {
-  margin: 10%;
+  margin-top: 10%;
   background-color: #ffffff;
   display: grid;
 }
@@ -107,7 +107,10 @@ button:focus-visible {
 }
 
 .pagination {
-  display: inline-block;
+  background-color:"whitesmoke";
+  width: 100%;
+  height: 320px;
+  z-index: 1100;
 }
 .view_button {
   position: sticky;
@@ -118,6 +121,7 @@ button:focus-visible {
 .navbar {
   overflow: hidden;
   top: 0; /* Position the navbar at the top of the page */
+
 }
 .zoom {
   /* padding: 50px; */
@@ -133,4 +137,17 @@ button:focus-visible {
   -webkit-transform: scale(1.1); /* Safari 3-8 */
   transform: scale(1.1);
   z-index: -10;
+}
+
+.search {
+  background-color: #ffffff;
+  width: 100%;
+  height: 120px;
+  position: fixed;
+  top: 64px;
+}
+.error {
+  text-align:left;
+  width: 100%;
+  max-width: 50%;
 }
